# skillforge

./: .gitignore  CONTRIBUTING.md  DEVLOG.md  LICENSE  PRD.md  README.md  SKILL.md  config.yaml  pyproject.toml  skillforge-registry.yaml
cursor-rule/: skillforge.mdc
docs/: advanced.md  config.md  cursor-integration.md  how-it-works.md  integrations.md  quickstart.md  skill-registry.md
docs/archive/: ARCHIVE-v0.1.1-6dims.mdc
integrations/: AGENTS.md
memory/: capability-index.yaml  reflections.md
src/skillforge/: __init__.py  __main__.py  cli.py  config.py  decider.py  engine.py  evaluator.py  executor.py  forger.py  indexer.py  mar.py  models.py  reflexion.py  registry.py  tracing.py  vector_search.py
tests/: test_cwd_independence.py  test_forger.py  test_forger_emergent.py  test_infer_task_type.py  test_mar.py  test_reflexion.py  test_show_skill.py  test_skillforge.py  test_stage3_integration.py  test_stage4_integration.py  test_update_l0.py  test_vector_search.py
